--- a/index.html
+++ b/index.html
@@ -1,35 +1,3 @@
 <html>
-  <head>
-    <style>
-    </style>
-  </head>
-  <body>
-    <button id="start-camera">Start Camera</button>
-    <video id="video" width="400" height="400" autoplay></video>
-    <button id="click-photo">Click Camera</button>
-    <canvas id="canvas" width="400" height="400"></canvas>
-
-    <script>
-      let camera_button = document.querySelector("#start-camera");
-      let video = document.querySelector("#video");
-      let click_button = document.querySelector("#click-photo");
-      let canvas = document.querySelector("#canvas");
-
-      camera_button.addEventListener("click", async function () {
-        let stream = await navigator.mediaDevices.getUserMedia({
-          video: true,
-          audio: false,
-        });
-        video.srcObject = stream;
-      });
-
-      click_button.addEventListener("click", function () {
-        canvas
-          .getContext("2d")
-          .drawImage(video, 0, 0, canvas.width, canvas.height);
-        let image_data_url = canvas.toDataURL("image/jpeg");
-        console.log(image_data_url);
-      });
-    </script>
-  </body>
+  <h1>TEST PAGE</h1>
 </html>
