--- a/index.html
+++ b/index.html
@@ -1,3 +1,111 @@
-<html>
-  <h1>TEST PAGE</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"
+      integrity="sha512-0z8URjGET6GWnS1xcgiLBZBzoaS8BNlKayfZyQNKz4IRp+s7CKXx0yz7Eco2+TcwoeMBa5KMwmTX7Kus7Fa5Uw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </head>
+  <body>
+    <script>
+      var engine = Matter.Engine.create();
+
+      // Create a renderer
+      var render = Matter.Render.create({
+        element: document.body,
+        engine: engine,
+      });
+
+      //
+      let LEFT = 50;
+      let TOP = 50;
+      let X = 25;
+      let Y = 8;
+      let OFF = 20;
+      let dots = [];
+      let lines = [];
+      let stiffness = 0.5;
+      let particleSize = 5;
+
+      //
+      let row = [];
+      for (let x = 0; x < X; x++) {
+        var particle = Matter.Bodies.circle(LEFT + OFF * x, TOP, particleSize, {
+          isStatic: true,
+        });
+        row.push(particle);
+      }
+      dots.push(row);
+
+      //
+      for (let y = 0; y < Y; y++) {
+        row = [];
+        last = null;
+        for (let x = 0; x < X; x++) {
+          //
+          var particle = Matter.Bodies.circle(
+            LEFT + OFF * x,
+            TOP * (y + 2)+(x%2==0?2:0),
+            particleSize
+          );
+          row.push(particle);
+          particle.collisionFilter.group = -1;
+
+          //
+          var constraint = Matter.Constraint.create({
+            bodyA: dots[y][x],
+            bodyB: particle,
+            stiffness: stiffness,
+            damping:1
+          });
+          lines.push(constraint);
+        //   constraint.collisionFilter.group = -1;
+
+          //
+          if (last != null) {
+            constraint = Matter.Constraint.create({
+              bodyA: last,
+              bodyB: particle,
+              stiffness: stiffness,
+              damping:1
+            });
+            lines.push(constraint);
+            // constraint.collisionFilter.group = -1;
+          }
+
+          last = particle;
+        }
+        dots.push(row);
+      }
+
+      //
+      var mouseConstraint = Matter.MouseConstraint.create(engine, {
+        mouse: Matter.Mouse.create(render.canvas),
+      });
+
+      //
+      function get1DArray(arr) {
+        return arr.reduce((acc, val) => acc.concat(val), []);
+      }
+
+      // Add all of the bodies to the world
+      Matter.World.add(engine.world, [
+        ...get1DArray(dots),
+        ...get1DArray(lines),
+        mouseConstraint,
+      ]);
+
+      // Run the engine
+      Matter.Engine.run(engine);
+
+      // Run the renderer
+      Matter.Render.run(render);
+    </script>
+  </body>
 </html>
